--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.spring.petclinic</groupId>
 	<artifactId>spring-petclinic</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>pom</packaging>
 	<name>spring-petclinic</name>
 	<description>Demo project for Spring Boot</description>
@@ -37,4 +37,8 @@
     <module>spring-petclinic-model</module>
     <module>spring-petclinic-web</module>
   </modules>
+
+  <scm>
+    <tag>spring-petclinic-0.0.1</tag>
+  </scm>
 </project>
