--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,10 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-release-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration><goal>install</goal></configuration>
+				<autoVersionSubmodules>true</autoVersionSubmodules>
 			</plugin>
 		</plugins>
 	</build>
