--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<configuration><goal>install</goal></configuration>
+				<configuration><goal>install</goal>
 				<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
