commit message direct from git

--- a/release.properties
+++ b/release.properties
@@ -1,21 +1,11 @@
 #release configuration
-#Sat Dec 15 15:57:21 CET 2018
-scm.commentPrefix=[maven-release-plugin] 
-project.rel.com.spring.petclinic\:spring-petclinic=0.0.1
-project.scm.com.spring.petclinic\:spring-petclinic-model.empty=true
-pushChanges=true
-project.scm.com.spring.petclinic\:spring-petclinic-web.empty=true
-scm.tag=spring-petclinic-0.0.1
-remoteTagging=true
-projectVersionPolicyId=default
-scm.url=scm\:git\:git@github.com\:tsingh38/spring-petclinic.git
+#Sun Dec 16 17:45:58 CET 2018
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-project.dev.com.spring.petclinic\:spring-petclinic=0.0.2-SNAPSHOT
+pushChanges=true
+scm.url=scm\:git\:https\://github.com/tsingh38/spring-petclinic.git
 preparationGoals=clean verify
-project.dev.com.spring.petclinic\:spring-petclinic-model=0.0.2-SNAPSHOT
-project.rel.com.spring.petclinic\:spring-petclinic-web=0.0.1
-project.rel.com.spring.petclinic\:spring-petclinic-model=0.0.1
+projectVersionPolicyId=default
+remoteTagging=true
+scm.commentPrefix=[maven-release-plugin] 
 exec.snapshotReleasePluginAllowed=false
-project.dev.com.spring.petclinic\:spring-petclinic-web=0.0.2-SNAPSHOT
-completedPhase=run-preparation-goals
-project.scm.com.spring.petclinic\:spring-petclinic.empty=true
+completedPhase=check-poms
