--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.spring.petclinic</groupId>
 	<artifactId>spring-petclinic</artifactId>
@@ -31,10 +31,21 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration><goal>install</goal>
+				<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
   <modules>
     <module>spring-petclinic-model</module>
     <module>spring-petclinic-web</module>
   </modules>
+
+   <scm>
+    <developerConnection>scm:git:https://github.com/tsingh38/spring-petclinic.git</developerConnection>
+  </scm>
 </project>
