--- a/spring-petclinic-model/pom.xml
+++ b/spring-petclinic-model/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.spring.petclinic</groupId>
     <artifactId>spring-petclinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.spring.petclinic</groupId>
   <artifactId>spring-petclinic-model</artifactId>
