--- a/spring-petclinic-web/pom.xml
+++ b/spring-petclinic-web/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>com.spring.petclinic</groupId>
     <artifactId>spring-petclinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.spring.petclinic</groupId>
   <artifactId>spring-petclinic-web</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.1-SNAPSHOT</version>
   <name>spring-petclinic-web</name>
   <url>http://maven.apache.org</url>
   <properties>
