--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.spring.petclinic</groupId>
 	<artifactId>spring-petclinic</artifactId>
-	<version>spring-petclinic 0.0.2</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>spring-petclinic</name>
 	<description>Demo project for Spring Boot</description>
@@ -47,6 +47,5 @@
 
    <scm>
     <developerConnection>scm:git:https://github.com/tsingh38/spring-petclinic.git</developerConnection>
-    <tag>spring-petclinic-spring-petclinic 0.0.2</tag>
   </scm>
 </project>
