--- a/spring-petclinic-model/pom.xml
+++ b/spring-petclinic-model/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>com.spring.petclinic</groupId>
     <artifactId>spring-petclinic</artifactId>
-    <version>spring-petclinic 0.0.2</version>
+    <version>0.0.2-SNAPSHOT</version>
   </parent>
   <groupId>com.spring.petclinic</groupId>
   <artifactId>spring-petclinic-model</artifactId>
-  <version>spring-petclinic 0.0.2</version>
+  <version>0.0.2-SNAPSHOT</version>
   <name>spring-petclinic-model</name>
   <url>http://maven.apache.org</url>
   <properties>
