--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.spring.petclinic</groupId>
 	<artifactId>spring-petclinic</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>spring-petclinic</name>
 	<description>Demo project for Spring Boot</description>
@@ -47,6 +47,6 @@
 
    <scm>
     <developerConnection>scm:git:https://github.com/tsingh38/spring-petclinic.git</developerConnection>
-    <tag>spring-petclinic-0.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
