--- a/spring-petclinic-web/pom.xml
+++ b/spring-petclinic-web/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <groupId>com.spring.petclinic</groupId>
     <artifactId>spring-petclinic</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
   <groupId>com.spring.petclinic</groupId>
   <artifactId>spring-petclinic-web</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3-SNAPSHOT</version>
   <name>spring-petclinic-web</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -18,7 +18,7 @@
   <dependency>
     <groupId>com.spring.petclinic</groupId>
   <artifactId>spring-petclinic-model</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3-SNAPSHOT</version>
   </dependency>
   <dependency>
 			<groupId>org.springframework.boot</groupId>
