maven plugin package complete

--- a/spring-petclinic-model/pom.xml
+++ b/spring-petclinic-model/pom.xml
@@ -13,6 +13,7 @@
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
   </properties>
   <dependencies>
   <dependency>
